# PascalMLIR

./: Cargo.toml  LICENSE  README.md
programs/: first.pas
src/: ast.rs  grammar.lalrpop  lexer.rs  main.rs  tokens.rs
