[package]
name = "pascal-mlir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
melior = { version = "0.14.0", features = ["ods-dialects"] }
clap = { version = "4.3.3", features = ["derive"] }
color-eyre = "0.6.2"
itertools = "0.12"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
regex = "1.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
annotate-snippets = { version = "0.10.0" }
logos = "0.13.0"

[build-dependencies]
lalrpop = "0.20.0"
